--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+          <img 
+            scrset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
+            sizes = "(max-width: 500px) 120px, 400px"
+            src = "firefoxlogo400.png" alt="Firefox Logo" />
 
     </header>
 
@@ -118,22 +122,36 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img 
+            scrset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
+            sizes = "(max-width: 500px) 120px, 400px"
+            src = "firefoxlogo400.png" alt="Firefox Browser" />
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img 
+            scrset = "mozilladinosaurhead400.png 400w, mozilladinosaurhead120.png 120w"
+            sizes = "(max-width: 500px) 120px, 400px"
+            src = "mozilladinosaurhead400.png" alt="Mozilla Official Site" />
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img 
+            scrset = "firefoxaddons400.jpg 400w, firefoxaddons120.jpg 120w"
+            sizes = "(max-width: 500px) 120px, 400px"
+            src = "firefoxaddons400.jpg" alt="Firefox Addons" />
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src = "mdn.svg" width = "400px" alt = "Mozilla Developer Site" />
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+          <source media = "(max-width: 600px)" srcset = "red-panda-portrait.jpg"/>
+          <source media = "(min-width: 601px)" srcset = "red-panda-landscape.jpg"/>
+          <img src = "red-panda-landscape.jpg" alt = "Picture of a Red panda" />
+        </picture>
       </div>
 
     </main>
