--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
           <img 
-            scrset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
+            srcset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
             sizes = "(max-width: 500px) 120px, 400px"
             src = "firefoxlogo400.png" alt="Firefox Logo" />
 
@@ -111,7 +111,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        <iframe width="400" height="226" src="https://www.youtube.com/embed/ojcNcvb1olg?si=T677hlpLgn94MUmS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="400" height="226" src="https://www.youtube.com/embed/ojcNcvb1olg?si=T677hlpLgn94MUmS" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -124,24 +124,24 @@
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img 
-            scrset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
+            srcset = "firefoxlogo400.png 400w, firefoxlogo120.png 120w"
             sizes = "(max-width: 500px) 120px, 400px"
             src = "firefoxlogo400.png" alt="Firefox Browser" />
         </a>
         <a href="https://www.mozilla.org/">
           <img 
-            scrset = "mozilladinosaurhead400.png 400w, mozilladinosaurhead120.png 120w"
+            srcset = "mozilladinosaurhead400.png 400w, mozilladinosaurhead120.png 120w"
             sizes = "(max-width: 500px) 120px, 400px"
             src = "mozilladinosaurhead400.png" alt="Mozilla Official Site" />
         </a>
         <a href="https://addons.mozilla.org/">
           <img 
-            scrset = "firefoxaddons400.jpg 400w, firefoxaddons120.jpg 120w"
+            srcset = "firefoxaddons400.jpg 400w, firefoxaddons120.jpg 120w"
             sizes = "(max-width: 500px) 120px, 400px"
             src = "firefoxaddons400.jpg" alt="Firefox Addons" />
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src = "mdn.svg" width = "400px" alt = "Mozilla Developer Site" />
+          <img src = "mdn.svg" width = "400" alt = "Mozilla Developer Site" />
         </a>
         <div class="clearfix"></div>
       </div>
